--- a/context/brand-context/springernature/scss/30-mixins/typography.scss
+++ b/context/brand-context/springernature/scss/30-mixins/typography.scss
@@ -1,42 +1,42 @@
 // Headings
 
 @mixin u-h1() {
-	font-weight: $font-weight-light;
-	font-size: $font-size-h1;
-	font-size: unquote('min(max(#{$font-size-h1-min}, 4vw), #{$font-size-h1})');
+	font-weight: $context--font-weight-light;
+	font-size: $context--font-size-h1;
+	font-size: unquote('min(max(#{$context--font-size-h1-min}, 4vw), #{$context--font-size-h1})');
 	margin-bottom: spacing(16);
-	font-family: $font-family-serif;
-	line-height: unquote('min(max(#{$line-height-h1-min}, 4vw), #{$line-height-h1})');
+	font-family: $context--font-family-serif;
+	line-height: unquote('min(max(#{$context--line-height-h1-min}, 4vw), #{$context--line-height-h1})');
 }
 
 @mixin u-h2() {
-	font-weight: $font-weight-normal;
-	font-size: unquote('min(max(#{$font-size-h2-min}, 4vw), #{$font-size-h2})');
+	font-weight: $context--font-weight-normal;
+	font-size: unquote('min(max(#{$context--font-size-h2-min}, 4vw), #{$context--font-size-h2})');
 	margin-bottom: spacing(16);
-	font-family: $font-family-serif;
-	line-height: unquote('min(max(#{$line-height-h2-min}, 4vw), #{$line-height-h2})');
+	font-family: $context--font-family-serif;
+	line-height: unquote('min(max(#{$context--line-height-h2-min}, 4vw), #{$context--line-height-h2})');
 }
 
 @mixin u-h3() {
-	font-weight: $font-weight-bold;
-	font-size: unquote('min(max(#{$font-size-h3-min}, 4vw), #{$font-size-h3})');
+	font-weight: $context--font-weight-bold;
+	font-size: unquote('min(max(#{$context--font-size-h3-min}, 4vw), #{$context--font-size-h3})');
 	margin-bottom: spacing(16);
-	font-family: $font-family-serif;
-	line-height: unquote('min(max(#{$line-height-h3-min}, 4vw), #{$line-height-h3})');
+	font-family: $context--font-family-serif;
+	line-height: unquote('min(max(#{$context--line-height-h3-min}, 4vw), #{$context--line-height-h3})');
 }
 
 @mixin u-h4() {
-	font-weight: $font-weight-bold;
-	font-size: unquote('min(max(#{$font-size-h4-min}, 4vw), #{$font-size-h4})');
+	font-weight: $context--font-weight-bold;
+	font-size: unquote('min(max(#{$context--font-size-h4-min}, 4vw), #{$context--font-size-h4})');
 	margin-bottom: spacing(16);
-	font-family: $font-family-sans;
-	line-height: unquote('min(max(#{$line-height-h4-min}, 4vw), #{$line-height-h4})');
+	font-family: $context--font-family-sans;
+	line-height: unquote('min(max(#{$context--line-height-h4-min}, 4vw), #{$context--line-height-h4})');
 }
 
 @mixin u-h5() {
-	font-weight: $font-weight-bold;
-	font-size: unquote('min(max(#{$font-size-h5-min}, 4vw), #{$font-size-h5})');
+	font-weight: $context--font-weight-bold;
+	font-size: unquote('min(max(#{$context--font-size-h5-min}, 4vw), #{$context--font-size-h5})');
 	margin-bottom: spacing(16);
-	font-family: $font-family-sans;
-	line-height: unquote('min(max(#{$line-height-h5-min}, 4vw), #{$line-height-h5})');
+	font-family: $context--font-family-sans;
+	line-height: unquote('min(max(#{$context--line-height-h5-min}, 4vw), #{$context--line-height-h5})');
 }
