[MC] Remove absolute references to context

--- a/context/brand-context/springernature/scss/enhanced.scss
+++ b/context/brand-context/springernature/scss/enhanced.scss
@@ -4,8 +4,7 @@
  */
 
 // Default setting, functions, mixins
-@import '~@springernature/brand-context/default/scss/abstracts';
-// @import '../../default/scss/abstracts';
+@import '../../default/scss/abstracts';
 
 // Springernature settings, functions, mixins
 @import 'abstracts';
