--- a/context/brand-context/springernature/scss/core.scss
+++ b/context/brand-context/springernature/scss/core.scss
@@ -5,13 +5,11 @@
  */
 
 // Default setting, functions, mixins
-@import '~@springernature/brand-context/default/scss/abstracts';
-// @import '../../default/scss/abstracts';
+@import '../../default/scss/abstracts';
 
 // Springernature settings, functions, mixins
 @import 'abstracts';
 
 // 40-base
-@import '~@springernature/brand-context/default/scss/40-base/normalize';
-// @import '../../default/scss/40-base/normalize';
+@import '../../default/scss/40-base/normalize';
 @import '40-base/basic';
