--- a/toolkits/global/packages/global-author-list/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-author-list/scss/10-settings/default.scss
@@ -7,7 +7,10 @@
 // base
 $global-author-list--font-size: 1.6rem;
 $global-author-list--color: black;
+$global-author-list--line-height: inherit;
+$global-author-list--font-family: inherit;
 
 // --compact
 $global-author-list--compact-font-size: 1.4rem;
 $global-author-list--compact-line-height: 1.4;
+
