[MC] Update colors to new SN brand standard

--- a/context/brand-context/springernature/scss/10-settings/colors/default.scss
+++ b/context/brand-context/springernature/scss/10-settings/colors/default.scss
@@ -6,28 +6,28 @@
 // default colors
 $context--colors: (
 	// Global colours
-	'black': #222,				// mineshaft
+	'black': #222, // Formely mineshaft
 	'white': #fff,
 	'red': #c40606,
 	'yellow': #fc0,
 	'blue': #004b83,
 	'blue-light': #0063ab,
 	'purple': #a345c9,
-	'grey-dark1': #555,			// emperor
-	'grey-dark2': #666,			// dove
-	'grey-light1': #f8f8f8,		// alabaster
-	'grey-light2': #f3f3f3,		// concrete
-	'grey-mid1': #dadada,		// alto
+	'grey-dark1': #555,	// Formely emperor
+	'grey-dark2': #666,	// Formely dove
+	'grey-light1': #f8f8f8, // Formely alabaster
+	'grey-light2': #f3f3f3, // Formely concrete
+	'grey-mid1': #dadada, // Formely alto
 
 	// SN Accent colours
 	'lilac':  #9d7eb8,
 	'emerald': #00b8b0,
 	'orange': #f58220,
 	'lime': #b6bd04,
-	'bright-blue': #3c9cd7,		// brightblue
+	'bright-blue': #3c9cd7,	// Formely brightblue
 
 	// SN Corporate colours
-	'gunmetal-blue': #183642,	// midnight
+	'gunmetal-blue': #183642, // Formely midnight
 	'electric-blue': #486a7e,
 	'pewter-blue': #8faec1,
 	'gainsboro-blue': #cedbe0,
