--- a/toolkits/springernature/packages/springernature-modal/scss/10-settings/springernature.scss
+++ b/toolkits/springernature/packages/springernature-modal/scss/10-settings/springernature.scss
@@ -4,5 +4,5 @@
  */
 
 $modal--border-color: color('blue');
-$modal--close-color: color('dove');
+$modal--close-color: color('grey-dark2');
 $modal--max-width: 561px;
