--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
@@ -32,7 +32,7 @@
 			padding: 7px 12px;
 
 			&:hover {
-				background-color: map-get($colors, midnight);
+				background-color: map-get($colors, 'gunmetal-blue');
 				color: #fff;
 			}
 		}
