--- a/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
@@ -19,8 +19,8 @@
 	}
 
 	.c-header__site-logo.with-journal-logo {
-		@include media-query('tablet-vertical') {
-			border-right: 2px solid map-get($context--colors, mineshaft);
+		@include media-query('tablet-wide-width') {
+			border-right: 2px solid map-get($context--colors, 'mineshaft');
 		}
 	}
 
