--- a/toolkits/springer/packages/springer-dropdown/scss/50-components/_enhanced.scss
+++ b/toolkits/springer/packages/springer-dropdown/scss/50-components/_enhanced.scss
@@ -66,7 +66,7 @@
 }
 
 .c-dropdown__link {
-	@include interface-link;
+	@include u-link-interface;
 	display: block;
 	padding: $dropdown--link-padding;
 	background-color: $dropdown--link-background-color;
