Updates springer-lists to latest context

--- a/toolkits/springer/packages/springer-lists/scss/50-components/_list-group.scss
+++ b/toolkits/springer/packages/springer-lists/scss/50-components/_list-group.scss
@@ -4,7 +4,7 @@
 }
 
 .c-list-group__item > a {
-	@include interface-link;
+	@include u-link-interface;
 }
 
 .c-list-group--xs .c-list-group__item {
