Updates springer-publisher-footer to latest context

--- a/toolkits/springer/packages/springer-publisher-footer/scss/50-components/_publisher-footer.scss
+++ b/toolkits/springer/packages/springer-publisher-footer/scss/50-components/_publisher-footer.scss
@@ -60,6 +60,6 @@
 
 .c-publisher-footer__link {
 	@include u-text-furniture;
-	@include interface-link;
+	@include u-link-interface;
 	@include gray-link;
 }
