--- a/context/brand-context/springernature/scss/60-utilities/buttons.scss
+++ b/context/brand-context/springernature/scss/60-utilities/buttons.scss
@@ -6,7 +6,7 @@
 // Default button
 
 .u-button {
-	border: 4px solid transparent;
+	border: $context--button-border-width-style transparent;
 	box-shadow: 0 0 0 1px $context--button-brand-color;
 
 	&:focus {
