--- a/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
@@ -33,11 +33,11 @@
 }
 
 .c-header__journal-title {
-	@include media-query('md') {
+	@include media-query('tablet-vertical') {
 		font-size: 2.2rem;
 	}
 
-	@include media-query('lg') {
+	@include media-query('tablet') {
 		font-size: 2.7rem;
 	}
 
