--- a/context/brand-context/springernature/scss/10-settings/typography.scss
+++ b/context/brand-context/springernature/scss/10-settings/typography.scss
@@ -4,7 +4,7 @@
  */
 
 $context--font-family-serif: 'Merriweather', serif;
-$context--font-family-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$context--font-family-sans: 'Daytona', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 $context--primary-text-color: color('black');
 $context--secondary-text-color: color('grey-dark2');
