--- a/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
@@ -20,7 +20,7 @@
 
 	.c-header__site-logo.with-journal-logo {
 		@include media-query('tablet-vertical') {
-			border-right: 2px solid map-get($colors, mineshaft);
+			border-right: 2px solid map-get($context--colors, mineshaft);
 		}
 	}
 
