--- a/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
@@ -4,7 +4,7 @@
 		display: flex;
 		justify-content: space-between;
 
-		@include media-query('tablet') {
+		@include media-query('desktop-width') {
 			width: calc(100% - 64px);
 			margin-left: 32px;
 		}
@@ -34,7 +34,7 @@
 		flex-basis: 60%;
 		flex-wrap: wrap;
 
-		@include media-query('tablet-vertical') {
+		@include media-query('tablet-wide-width') {
 			flex-basis: 70%;
 		}
 	}
