[NM, MC] Delete SN button utility class in favor of the default

--- a/context/brand-context/default/scss/30-mixins/buttons.scss
+++ b/context/brand-context/default/scss/30-mixins/buttons.scss
@@ -40,6 +40,7 @@
 
 @mixin button-small {
 	font-size: $context--button-font-size-small;
+	padding: $context--button-padding-small;
 }
 
 @mixin button-large {
