--- a/context/brand-context/springernature/scss/10-settings/buttons.scss
+++ b/context/brand-context/springernature/scss/10-settings/buttons.scss
@@ -9,6 +9,7 @@ $context--button-border-radius: 32px;
 $context--button-border-width-style: 4px solid;
 $context--button-font-size-normal: 1.4rem;
 $context--button-padding: 16px 32px;
+$context--button-padding-small: 8px 16px;
 $context--button-padding-large: 10px 35px;
 $context--button-letter-spacing: 0.7px;
 $context--button-font-family: $context--font-family-sans;
