[NM, MC] Delete sn u-container utility class

--- a/context/brand-context/default/scss/10-settings/container.scss
+++ b/context/brand-context/default/scss/10-settings/container.scss
@@ -2,3 +2,7 @@
 
 $context--container-width: 1280px;
 $context--container-padding: spacing(16);
+$context--container-background-color: transparent;
+$context--container-border-width-style: none;
+$context--container-border-color: transparent;
+$context--container-box-shadow: none;
