[MC] Changes around buttons for SN & default
- Remove SN buttons utilities
- Add more button settings to default context (basically migrated the
one needed by SN)

--- a/context/brand-context/default/scss/10-settings/buttons.scss
+++ b/context/brand-context/default/scss/10-settings/buttons.scss
@@ -31,14 +31,18 @@ $context--button-default: (
 	'backgroundColor': greyscale(95),
 	'backgroundImage': none,
 	'border': $context--button-border-width-style greyscale(80),
+	'boxShadow': inherit,
 	'visitedColor': darkblue,
 	'hoverColor': white,
 	'hoverBorder': $context--button-border-width-style greyscale(40),
+	'hoverBoxShadow': inherit,
 	'hoverBackgroundColor': greyscale(40),
 	'hoverBackgroundImage': none,
 	'hoverTextDecoration': none,
 	'focusBorder': $context--button-border-width-style greyscale(40),
 	'focusTextDecoration': none,
+	'focusBoxShadow': inherit,
+	'focusOutline': inherit,
 	'fontWeight': normal,
 );
 
