--- a/context/brand-context/springernature/scss/10-settings/buttons.scss
+++ b/context/brand-context/springernature/scss/10-settings/buttons.scss
@@ -26,15 +26,19 @@ $context--button-default: (
 	'color': color('white'),
 	'backgroundColor': $context--button-brand-color,
 	'backgroundImage': none,
-	'border': $context--button-border-width-style $context--button-brand-color,
+	'border': $context--button-border-width-style transparent,
+	'boxShadow': 0 0 0 1px $context--button-brand-color,
 	'visitedColor': color('white'),
 	'hoverColor': $context--button-brand-color,
 	'hoverBorder': $context--button-border-width-style color('white'),
+	'hoverBoxShadow': inherit,
 	'hoverBackgroundColor': color('white'),
 	'hoverBackgroundImage': none,
 	'hoverTextDecoration': none,
 	'focusBorder': $context--button-border-width-style $context--focus-color,
 	'focusTextDecoration': none,
+	'focusBoxShadow': none,
+	'focusOutline': none,
 	'fontWeight': $context--font-weight-bold,
 );
 
@@ -46,6 +50,8 @@ $context--button-secondary: (
 	'visitedColor': $context--button-brand-color,
 	'backgroundColor': color('white'),
 	'hoverColor': color('white'),
+	'hoverBorder': $context--button-border-width-style $context--button-brand-color,
+	'hoverBoxShadow': none,
 	'hoverBackgroundColor': $context--button-brand-color,
 	'fontWeight': $context--font-weight-bold,
 );
