--- a/context/brand-context/springernature/scss/40-base/layout.scss
+++ b/context/brand-context/springernature/scss/40-base/layout.scss
@@ -1,4 +1,4 @@
-/*
+/**
  * Layout
  * Universal layout styles
  */
@@ -12,10 +12,10 @@ html {
 body {
 	min-height: 100%;
 	font-family: $context--font-family-serif;
-	line-height: 1.76;
-	color: color('mineshaft');
-	background: color('alabaster');
-	font-size: 1.7em; /* fixes chrome rems bug - http://stackoverflow.com/questions/20099844/chrome-not-respecting-rem-font-size-on-body-tag */
+	font-size: $context--font-size-base;
+	line-height: $context--line-height-base;
+	color: $context--primary-text-color;
+	background: $context--page-background-color;
 	letter-spacing: 0.01em;
 }
 
