--- a/context/brand-context/springernature/scss/enhanced.scss
+++ b/context/brand-context/springernature/scss/enhanced.scss
@@ -10,6 +10,7 @@
 @import 'abstracts';
 
 // 40-base
+@import '40-base/typography';
 @import '40-base/layout';
 @import '40-base/links';
-@import '40-base/typography';
+@import '40-base/tables';
