[NM, MC] Address pr comment

--- a/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
@@ -46,8 +46,8 @@
 	font-size: 2rem;
 	font-size: 1.5rem;
 	color: color('black');
+}
 
-	&.hide {
-		display: none;
-	}
+.c-header__journal-title--hide {
+	display: none;
 }
