[NM, MC] Add new Springernature components brand (#455)
* `global-author-list` component
    - BREAKING: switch to use new `brand-context` dependency
    - Introduce new settings for line-height and font-family
    - Add settings layer for Springernature brand
* `global-meta` list component
    - BREAKING: switch to use new `brand-context` dependency
    - Add Springernature branding
* `global-breadcrumbs` list component
    - BREAKING: switch to use new `brand-context` dependency
    - Add a new setting for chevron's colour
    - Add Springernature branding

Co-authored-by: Nasia Makrygianni <athanasia.makrygianni@springernature.com>

--- a/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/core.scss
@@ -33,11 +33,11 @@
 }
 
 .c-header__journal-title {
-	@include media-query('tablet-vertical') {
+	@include media-query('tablet-wide-width') {
 		font-size: 2.2rem;
 	}
 
-	@include media-query('tablet') {
+	@include media-query('desktop-width') {
 		font-size: 2.7rem;
 	}
 
@@ -45,9 +45,9 @@
 	line-height: 4.6rem;
 	font-size: 2rem;
 	font-size: 1.5rem;
-	color: color('mineshaft');
+	color: color('black');
+}
 
-	&.hide {
-		display: none;
-	}
+.c-header__journal-title--hide {
+	display: none;
 }
