--- a/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
@@ -3,3 +3,4 @@ $breadcrumbs-font-size: 16px;
 $breadcrumbs-color: black;
 $breadcrumbs-link-color: greyscale(40);
 $breadcrumbs-chevron-spacing: spacing(4) spacing(4) 0;
+$breadcrumbs-chevron-color: $breadcrumbs-link-color;
