updates font-size variable name in typography mixin

--- a/context/brand-context/springernature/scss/30-mixins/typography.scss
+++ b/context/brand-context/springernature/scss/30-mixins/typography.scss
@@ -42,7 +42,7 @@
 }
 
 @mixin u-small() {
-	font-size: $context--font-size-small;
+	font-size: $context--font-size-sm;
 }
 
 @mixin u-meta-large() {
