[NM, MC] Re-introduce card title font-weight settings
* BREAKING:
	* Switch to use new `brand-context` dependency
	* Remove springer settings as it does not override anything any more
* FEATURE:
	* Re-introduce the variable `$card--title-font-weight`
	* Add branding configurations for springer nature

--- a/toolkits/global/packages/global-card/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/default.scss
@@ -11,6 +11,7 @@ $card--padding: $card--gutter;
 $card--padding-x: 24px 0;
 $card--background: transparent;
 $card--title-spacing: $card--spacing;
+$card--title-font-weight: null;
 
 // --major
 $card--major-font-size: 1.6rem;
