[NM, MC] Re-introduce global card title font-weight settings (#459)
* BREAKING:
	* Switch to use new `brand-context` dependency
	* Remove springer settings as it does not override anything any more
* FEATURE:
	* Re-introduce the variable `$card--title-font-weight`
	* Add branding configurations for springer nature

--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -33,6 +33,9 @@
 
 .c-card__title {
 	@include u-h3;
+	@if $card--title-font-weight != null {
+		font-weight: $card--title-font-weight;
+	}
 	margin-bottom: $card--spacing;
 }
 
