[NM] Add fill rule for svg in button

--- a/context/brand-context/default/scss/30-mixins/buttons.scss
+++ b/context/brand-context/default/scss/30-mixins/buttons.scss
@@ -111,6 +111,10 @@
 	box-shadow: map-get($theme, 'boxShadow');
 	font-weight: map-get($theme, 'fontWeight');
 
+	svg {
+		fill: currentColor;
+	}
+
 	&:visited {
 		color: map-get($theme, 'visitedColor');
 	}
